Monitoring item addition